Revision history for Perl extension XTaTIK.

0.006001 Unreleased
    [Miscellaneous]
        - Add category titles to page titles when browsing categories (#163)

0.005001 2015-09-13
    [PayPal cart plugin]
        - Added option to specify custom fields
        - Added option to include arbitrary param()s in PayPal's custom field
    [Miscellaneous]
        - Made footer addresses look good for 1–6 locations (#129)
        - Made it possible to specify shoutout art for the animation
        - Added "after-shoutout" template fragment
    [Bug fixes]
        - Remove a product from Sites Products now actually removes it
        - Removed uninitialized warnings during cat page viewing
        - When auto-finding pictures, disallowed path chars in
            product numbers now get substituted to underscores
        - 'hypnotoad' config var is now respected in silos
        - Fix default map not displaying for unidentified locations
        - Fix zero-shipping-charge when free shipping mode is not used

0.004001 2015-09-12
    [Breaking Changes]
        - XTaTIK SASS variables without xtatik- prefix have been renamed (#146)
        - 'Add to quote' feature is now enabled by setting price to -1 dollars.
            Prices set to 0 now trigger "FREE" products instead (#149)
    [PayPal cart plugin]
        - Prevent accidental checkouts by following a URL from history (#152)
        - Fix formatting issues and markup errors on 'order' emails (#151)
        - Added 'free shipping for purchases above X-dollars' feature (#154)
    [Miscellaneous]
        - Fix formatting on Site Feedback and Quicknote emails (#150)
        - Added support for multiple product images, including auto-find (#105)

0.003001 2015-09-07
    [Breaking Changes]
        - Restructured cart plugin system
        - checkout_system config var now must be an arrayref
    [Bug fixes]
        - Fixed alignment on shoutout when thin logos are used
        - Removed use of experimental autoderef to be